1.54 2021-02-06
- set real versions for some modules - thanks @eserte for report

1.53 2020-09-17
- fix the broken "improved detection of modules" change

1.52 2020-09-07
- fix tests to work better on Windows
- doc fixes - thanks @whosgonna, @plicease, @simon04, @willsheppard
- improve detection of layout modules already available - thanks @KES777
- remove circular dependency in Log::Log4perl::Appender - thanks @lharey

1.51 2020-09-05
- test improvements removing race conditions
- minimum Perl 5.6

1.50 2020-07-22
   *    (ms) Fix for slow unlinking on Windows test - thanks @zhiyuan-lin
   *    (ms) [rt.cpan.org #121346] Gabor Kanizsai reported a regression
             with empty messages logged via syswrite(). Fixed with test
             case.

1.49 (2017/02/20)
   *    (ms) Adapted to perl 5.24 which balks at syswrite/utf8:
          https://github.com/mschilli/log4perl/issues/78

1.48 (2016/11/14)
   *    (ms) [rt.cpan.org #117377] Moved PatternLayout's documentation of
             DateFormat features to DateFormat.pm to avoid duplication 
             and keep the two parts consistent, as suggested by Max Carey.
   *    (ms) [rt.cpan.org #114822] Split two lines with CVS-sensitive 
             $Log.. variables into two parts.
   *    (ms) Semaphore issue fixed in Synchronized (reported by 
             Siarhei Kuchynski and Martin Köhler):
          https://github.com/mschilli/log4perl/issues/72
   *    (ms) header_text now works with syswrite (reported by Tom Metro):
          https://github.com/mschilli/log4perl/issues/73

1.47 (2016/03/17)
   *    (ms) [rt.cpan.org #102647] Slaven Rezic fixed a test
             case for file permissions
   *    (ms) Fixed synopsis code in Log::Log4perl::Appender::DBI, 
             reported by Chris Collins.
   *    (ms) Added suggestion by Dylan Doxey to test for both MSWin32 and
             cygwin to detect windows-like systems for which tests need
             to be skipped.