@@ -406,11 +406,10 @@ is($content, "This is a nice header.\n", "header_text");
 
 reset_logger();
 # same with syswrite
-unlink "${testfile}_5";
 $data = qq(
 log4perl.category         = DEBUG, Logfile
 log4perl.appender.Logfile          = Log::Log4perl::Appender::File
-log4perl.appender.Logfile.filename = ${testfile}_5
+log4perl.appender.Logfile.filename = ${testfile}_6
 log4perl.appender.Logfile.header_text = This is a nice header.
 log4perl.appender.Logfile.syswrite = 1
 log4perl.appender.Logfile.mode=write
@@ -419,7 +418,7 @@ log4perl.appender.Logfile.layout   = Log::Log4perl::Layout::SimpleLayout
 
 Log::Log4perl->init(\$data);
 Log::Log4perl->get_logger->debug( "waah!" );
-open FILE, "<${testfile}_5" or die "Cannot open ${testfile}_5";
+open FILE, "<", "${testfile}_6" or die "Cannot open ${testfile}_6";
 $content = join '', <FILE>;
 close FILE;
 
@@ -428,7 +427,6 @@ is($content, "This is a nice header.\nDEBUG - waah!\n", "header_text");
 ####################################################
 # Create path if it is not already created
 ####################################################
-
 
 my $testmkpathfile = File::Spec->catfile($testpath, "test26.log");
 
